完成手机短信登陆功能，高德地图当前定位，滚动，城市搜索等功能

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>ele-app</title>
+    <link rel="stylesheet" href="css/reset.css" />
+     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+    <style type="text/css">
+      html,body{width:100%;height:100%;}
+    </style>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=b611d3512444fb3e77ab9afabd7a41cf"></script> 
   </head>
   <body>
     <noscript>
